--- a/papers/gpce2013/gpce2013.tex
+++ b/papers/gpce2013/gpce2013.tex
@@ -597,7 +597,18 @@ code and to maintain it.
 
 \subsection{Micro-Benchmark}
 
+\begin{figure}
+\centering
+\includegraphics[width=8cm]{microbenchmark.png}
+\caption{Micro-benchmark on the optional values abstraction}
+\label{micro-benchmark}
+\end{figure}
 
+Figure \ref{micro-benchmark} shows the micro-benchmark results. We measured the runtime performance, the number of
+lines of code (as an indication of the abstraction level), and finally the ratio of runtime performance and lines of
+code. \emph{js-scala} is between 3 to 100 times faster than other approaches on our benchmark. Combined with that
+fact that it provides high-level abstractions, it has a performance / lines of code ratio more than 4 times higher
+than other approaches.
 
 \subsection{Real World Application}
 
